--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kaspi-test-task",
   "version": "0.1.0",
+  "homepage": "https://alikzilla.github.io/kaspi-test-task",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -11,8 +12,14 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
+    "i18next-localstorage-backend": "^4.2.0",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
@@ -23,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +54,7 @@
   },
   "devDependencies": {
     "ajv": "^7.2.4",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.17"
   }
 }
